// This file holds the data structures related with the functionality of a shard block
//
// MiniBlock structure represents the body of a transaction block, holding an array of miniblocks
// each of the miniblocks has a different destination shard
// The body can be transmitted even before having built the heder and go through a prevalidation of each transaction

syntax = "proto3";

package proto;

// Transaction holds all the data needed for a value transfer or SC call
message Transaction {
	uint64   Nonce                         = 1;
	bytes    Value                         = 2;
	bytes    RcvAddr                       = 3;
	bytes    RcvUserName                   = 4;
	bytes    SndAddr                       = 5;
	bytes    SndUserName                   = 6;
	uint64   GasPrice                      = 7;
	uint64   GasLimit                      = 8;
	bytes    Data                          = 9;
	bytes    ChainID                       = 10;
	uint32   Version                       = 11;
	bytes    Signature                     = 12;
	uint32   Options                       = 13;
	bytes    GuardianAddr                  = 14;
	bytes    GuardianSignature             = 15;
	bytes    Relayer                       = 16;
	repeated Transaction InnerTransactions = 17;
}
